<resources>
    <string name="app_name">Material Stopwatch</string>
    <string name="reset">Reset</string>
    <string name="default_time">00.00</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="stopwatch_speed">Stopwatch speed</string>
    <string name="speed_key" translatable="false">speed</string>
    <string name="settings_key" translatable="false">settings_key</string>
    <string name="font_key">font_key</string>
    <string name="font_size">Stopwatch font size</string>
</resources>