<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="@string/settings_key"
    android:title="@string/settings">
    <ListPreference
        android:icon="@drawable/ic_access_time_black_24dp"
        android:key="@string/speed_key"
        android:title="@string/stopwatch_speed"
        android:entryValues="@array/freq_values"
        android:entries="@array/freq_entries"
        android:defaultValue="100"
        app:useSimpleSummaryProvider="true" />
    <ListPreference
        android:icon="@drawable/ic_format_size_white_24dp"
        android:key="@string/font_key"
        android:title="@string/font_size"
        android:entryValues="@array/font_values"
        android:entries="@array/font_entries"
        android:defaultValue="48"
        app:useSimpleSummaryProvider="true" />
</PreferenceScreen>